--- a/app/views/home/Indexguest.html.erb
+++ b/app/views/home/Indexguest.html.erb
@@ -5,14 +5,10 @@
               
         </div>
         
-<%= form_with(url: "/search", method: "get") do %>
+<%= form_tag(home_searchguest_path, method: "get") do %>
   <%= text_field_tag(:q, "", class: "input-field") %>
   <%= submit_tag("Search",class: "search-btn") %>
 <% end %>
 
-    <%
-=begin%>
- <%= link_to  "SIGNE UP ", new_user_registration_path %> 
-<%
-=end%>
+    
  </div>
