--- a/app/views/home/searchguest.html.erb
+++ b/app/views/home/searchguest.html.erb
@@ -1,3 +1,21 @@
+<nav>
+<ul>
+    <li> <%= link_to  "HOME", home_index_path %></li>
+    
+</ul>
+</nav>
+
 <% @results.each do |result| %>
-<h1> <%= result.email %></h1>
+<div class= "search-container">
+    <div class = "user-card">
+        <div class ="full-name-city">
+            <div class = "full-name">
+            <h1><%= result.first_name %> <%= result.last_name %></h1>
+        </div>
+            <h3><%= result.country %>,<%= result.city %></h3>
+            <<%= image_tag  "1.jpg", class:"avatar" %>>
+        </div>
+        
+    
+</div>
 <%end%>
