--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,16 @@
 <h1><%=@role%></h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <%= link_to  "sign out", destroy_user_session_path, method: :delete %>
+<div class ="container">
+        <div>
+              <%= image_tag  "1.jpg", class: "img" %>
+              
+        </div>
+        
+<%= form_tag(home_searchuser_path, method: "get") do %>
+  <%= text_field_tag(:query, "", class: "input-field") %>
+  <%= submit_tag("Search",class: "search-btn") %>
+<% end %>
+
+    
+ </div>
