--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,22 +4,24 @@
 // html {
 //   //   background-color: white;
 // }
-
+* {
+  margin: 0;
+}
 body {
   margin: 0 auto;
+  background-color: #d0b375;
 }
 .container {
   height: 100vh;
   width: 100vw;
-  background-color: yellowgreen;
+
   margin: 0 auto;
   text-align: center;
 }
-img {
+.main_image {
   margin: 15vh;
-
-  height: 50vh;
-  width: 50vw;
+  height: 30vh;
+  width: 30vw;
 }
 .input-field {
   width: 40vw;
@@ -31,10 +33,15 @@ img {
   position: absolute;
   right: 27%;
 }
+a {
+  color: #d0b375;
+  text-decoration: none;
+}
 nav {
-  background-color: saddlebrown;
-  height: 10vh;
-  padding: 1vh;
+  background-color: #a31b0c;
+  height: 4vh;
+  padding: 3vh;
+  margin: 0 auto;
 }
 ul {
   display: flex;
@@ -42,17 +49,42 @@ ul {
 li {
   margin-left: 2%;
   line-height: 5%;
+  list-style: none;
 }
 .search-container {
+  position: relative;
   display: flex;
+  height: fit-content;
 }
 .user-card {
   text-align: center;
   height: 30vh;
   width: 30vw;
-  background-color: red;
-  margin: 1%;
+  background-color: #e9e9e9;
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-top: 10px;
 }
-.full-name{
+.full-name {
   display: flex;
+  flex-direction: column;
+  margin-left: 2%;
+}
+.avatar {
+  height: 13vh;
+  max-width: 13vw;
+}
+.personal-info {
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 2vh;
+  justify-content: space-around;
+}
+.name {
+  font-size: 1.5rem;
+  text-align: left;
+}
+.country {
+  font-size: 1rem;
+  text-align: left;
 }
