--- a/app/views/home/searchguest.html.erb
+++ b/app/views/home/searchguest.html.erb
@@ -16,7 +16,7 @@
             <h1 class = "name"><%= result.first_name %> <%= result.last_name %></h1>
             <h3 class = "country"><%= result.country %>,<%= result.city %></h3>
         </div>
-            
+        <div class="about-me">TEST</div>
             <%= image_tag  "1.jpg", class:"avatar" %>
         </div>
         
