--- a/app/views/home/searchuser.html.erb
+++ b/app/views/home/searchuser.html.erb
@@ -5,7 +5,7 @@
     <li> <%= link_to  "ABOUT US", home_index_path %></li>
     <li> <%= link_to  "FAQs", home_index_path %></li>
 </ul>
-<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+<div><%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
 </nav>
 <% @result.each do |result| %>
 <h1> <%= result.name %></h1>
