--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,14 @@
+<nav>
+<ul>
+    <li> <%= link_to  "HOME", home_index_path %></li>
+    <li> <%= link_to  "TRIPS & TOURS", home_index_path %></li>
+    <li> <%= link_to  "ABOUT US", home_index_path %></li>
+    <li> <%= link_to  "FAQs", home_index_path %></li>
+</ul>
+<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+</nav>
+<div class="container">
 <h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -48,3 +57,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
