css sign-u and new trip

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <li> <%= link_to  "ABOUT US", home_index_path %></li>
     <li> <%= link_to  "FAQs", home_index_path %></li>
 </ul>
-<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %>
 </nav>
 <h1><%=@role%></h1>
 <p>Find me in app/views/home/index.html.erb</p>
