--- a/app/views/trip/new.html.erb
+++ b/app/views/trip/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_for @trip do |f| %>
     <%=f.label :name, 'Name of the trip'%>
     <%=f.text_field :name, placeholder: "Come up with something attractive", :required => 'required'%>
@@ -25,3 +26,4 @@
     <br /> <br />
     <%=f.submit "Submit"%>
 <%end%>
+</div>
