add nav bar and change btn

--- a/app/views/home/searchuser.html.erb
+++ b/app/views/home/searchuser.html.erb
@@ -1,4 +1,6 @@
-<nav>
+<%
+=begin%>
+ <nav>
 <ul>
     <li> <%= link_to  "HOME", home_index_path %></li>
     <li> <%= link_to  "TRIPS & TOURS", home_index_path %></li>
@@ -6,7 +8,9 @@
     <li> <%= link_to  "FAQs", home_index_path %></li>
 </ul>
 <div><%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
-</nav>
+</nav> 
+<%
+=end%>
 <% @result.each do |result| %>
 <h1><%= result.id%> <%= link_to  "Book", trip_show_path(:id => result.id)%></h1>
 <%end%>
