--- a/app/views/home/searchguest.html.erb
+++ b/app/views/home/searchguest.html.erb
@@ -5,7 +5,9 @@
     <li> <%= link_to  "ABOUT US", home_index_path %></li>
     <li> <%= link_to  "FAQs", home_index_path %></li>
 </ul>
-<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+<%= button_to "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+<%= button_to "Sign in", user_session_path %></div>
+
 </nav>
 
 <% @results.each do |result| %>
