--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
     <li> <%= link_to  "ABOUT US", home_index_path %></li>
     <li> <%= link_to  "FAQs", home_index_path %></li>
 </ul>
-<%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
+<div><%= button_to "Become a guide", home_becomeguide_path, class:"join_btn" %></div>
 </nav>
 <h1><%=@role%></h1>
 <p>Find me in app/views/home/index.html.erb</p>
@@ -20,6 +20,6 @@
   <%= text_field_tag(:query, "", class: "input-field") %>
   <%= submit_tag("Search",class: "search-btn") %>
 <% end %>
-<%= link_to  "sign out", destroy_user_session_path, method: :delete %>
+<%= button_to "Sign out", destroy_user_session_path, method: :delete %>
 
  </div>
