--- a/app/views/home/indexguest.html.erb
+++ b/app/views/home/indexguest.html.erb
@@ -6,5 +6,5 @@
     <%= text_field_tag(:q, "", class: "input-field") %>
     <%= submit_tag("Search",class: "search-btn") %>
 <% end %>  
- <%= link_to  "SIGNE UP ", new_user_registration_path %>
+<div><%= button_to  "JOIN US", new_user_registration_path, class:"join_btn" %></div>
  </div>
