--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -69,6 +69,17 @@ li {
   margin-top: 40px;
   box-shadow: 0 0 20px rgba(0,0,0, 0.2);
 }
+.guide-card {
+  position: relative;
+  text-align: left;
+  height: 160px;
+  width: 100vw;
+  background-color: #e9e9e9;
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-top: 40px;
+  box-shadow: 0 0 20px rgba(0,0,0, 0.2);
+}
 .full-name-div {
   position: absolute;
   left: 40%;
@@ -91,6 +102,7 @@ li {
   padding: 2vh;
   justify-content: space-around;
 }
+
 .name {
   font-size: 1.5rem;
   text-align: left;  
@@ -134,4 +146,13 @@ li {
 .sign{
   background-color: blue;
   z-index: 2;
+}
+.full-name-profile {
+  position: absolute;
+  left: 15%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 2px solid black ;
+  
 }
