--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -73,7 +73,7 @@ li {
   position: relative;
   text-align: left;
   height: 160px;
-  width: 100vw;
+  width: 90vw;
   background-color: #e9e9e9;
   margin-right: 2%;
   margin-left: 2%;
@@ -96,6 +96,13 @@ li {
   height: 13vh;
   max-width: 13vw;
 }
+.avatar2 {
+  position: absolute;
+  left :1%;
+  top: 7%;
+  height: 20vh;
+  max-width: 20vw;
+}
 .personal-info {
   display: flex;
   flex-direction: row;
@@ -112,6 +119,18 @@ li {
   text-align: left;
   font-weight: 100;
   color: #686868;
+}
+.join_btn2 {
+  background-color: #d0b375;
+  border: none;
+  display: block;
+  margin: 0 auto;
+  height: 1.5em;
+  width: 7em;
+  border-radius: 12px;
+  position: absolute;
+  top: 1%;
+  left: 80%;
 }
 .join_btn {
   background-color: #d0b375;
@@ -132,7 +151,13 @@ li {
   font-size: 1.3em;
   margin-top: 10px;
 }
-
+.about-me-profile {
+  position: absolute;
+  top:30%;
+  left: 16%;
+  font-size: 1.3em;
+  margin-top: 10px;
+}
 .book-btn {
   background-color: #a31b0c;
   border: none;
@@ -149,10 +174,37 @@ li {
 }
 .full-name-profile {
   position: absolute;
-  left: 15%;
+  left: 16%;
   width: 40%;
   display: flex;
   flex-direction: column;
   border-bottom: 2px solid black ;
   
+}
+.card-div{
+  display: flex;
+  height: 200px;
+  padding: 2%;
+}
+.profile-image{
+  width: 200px;
+  margin-right:1% ;
+}
+.card-div2{
+  display: flex;
+  flex-direction: column;
+  
+  height: 200px;
+  padding: 2%;
+  background-color: gray;
+}
+.single-line{
+  display: flex;
+  font-weight: 100;
+  width: 100vh;
+  justify-content: space-around;
+}
+.btns{
+  display: flex;
+  flex-direction: row;
 }
