solving Become a guide

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 <% if current_user == nil %>
 <%= button_to  "JOIN US", new_user_registration_path, method: :get, class:"join_btn" %></div>
 <%elsif current_user.role == "user"%>
-<%= button_to  "Become Guide", new_user_registration_path, method: :get, class:"join_btn" %></div>
+<%= button_to  "Become Guide", edit_user_registration_path(:guide => "true"), method: :get, class:"join_btn" %></div>
 <%else%>
 <%= button_to  "Create Trip", trip_new_path, method: :get, class:"join_btn" %></div>
 <%end%>
