--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,7 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
+  
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -30,7 +29,20 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
+  
 
+  <% if current_user.role == 'user'%>
+  <%= f.hidden_field :role, :value => "guide" %>
+<div class="form-group">
+<%= f.label :about_me, 'About Me'%><br/>
+<%= f.text_field :about_me%>
+</div>
+
+<div class="form-group">
+<%= f.label :why_me, 'Why Me'%><br/>
+<%= f.text_field :why_me%>
+</div>
+<%end%>
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
