Update Become a guide

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,55 +1,47 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
   <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
-  
 
-  <% if current_user.role == 'user'%>
-  <%= f.hidden_field :role, :value => "guide" %>
-<div class="form-group">
-<%= f.label :about_me, 'About Me'%><br/>
-<%= f.text_field :about_me%>
-</div>
 
-<div class="form-group">
-<%= f.label :why_me, 'Why Me'%><br/>
-<%= f.text_field :why_me%>
+<% if current_user.role == "user" %>
+<%= f.label :Become_a_Guide? %>
+  <%= check= f.check_box :about_me,{}, true, false %>
+  <% if check.include?("true")%>
+  <%= f.hidden_field :role, :value => 'guide' %>
+  <div id="card_details" style="display:none;">
+  <div class="field">
+  <%= f.label :about_me %> <br /><%= f.text_field :about_me , :required => 'requierd'%>
+  </div>
+  <div class="field">
+    <%= f.label :why_me %><br /> <%= f.text_field :why_me , :required => 'requierd' %>
+    </div>
+    <%end%>
+<div class="actions">
+    <%= button_to "Come a guide",  home_searchuser_path, method: :update%>
+  </div>
+<%end%>
 </div>
 <%end%>
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+
 
 <h3>Cancel my account</h3>
-
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
 <%= link_to "Back", :back %>
+
+
+<script type="text/javascript">
+  var checkbox = document.getElementById('user_about_me');
+  var details_div = document.getElementById('card_details');
+  checkbox.onchange = function() {
+     if(this.checked) {
+       details_div.style['display'] = 'block';
+     } else {
+       details_div.style['display'] = 'none';
+     }
+  };
+</script>
