--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,6 +10,7 @@
 body {
   margin: 0 auto;
   background-color: #d0b375;
+  color: black;
 }
 .container {
   height: 100vh;
@@ -38,6 +39,9 @@ a {
   color: #d0b375;
   text-decoration: none;
 }
+.link-to{
+  color: black;
+}
 nav {
   background-color: #a31b0c;
   height: 40px;
@@ -62,7 +66,7 @@ li {
   position: relative;
   text-align: center;
   height: 160px;
-  width: 400px;
+  width: 200px;
   background-color: #e9e9e9;
   margin-right: 2%;
   margin-left: 2%;
@@ -151,6 +155,9 @@ li {
   font-size: 1.3em;
   margin-top: 10px;
 }
+.booking{
+  z-index: 99;
+}
 .about-me-profile {
   position: absolute;
   top:30%;
@@ -218,7 +225,7 @@ li {
 .trip-card{
   display: flex;
   flex-direction: column;
-  height: 200px;
+  height: 100px;
   width: 200px;
   background-color: #a31b0c;
   padding: 2%;
