--- a/app/views/trip/show.html.erb
+++ b/app/views/trip/show.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @trip.name%></h1>
-
-<%= link_to  "Book", booking_new_path(:id => @trip.id, :user_id => current_user.id)%>
+<%= link_to  "View", home_guideprofile_path(:id => @trip.user.id),class:"link-to" %>
+<%= link_to  "Book", booking_new_path(:id => @trip.id, :user_id => current_user.id),class:"link-to"%>
