--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Join Our Team</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :required => 'requierd' %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -12,41 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password", :required => 'requierd' %>
-  </div>
-    <div class="actions">
-    <%= f.submit "Update", method: :update %>
-  </div>
+  </div> 
 
 <% if current_user.role == "user" %>
-<%= f.label :Become_a_Guide? %>
+<%= f.label :Confirm_To_Be_Guide? %>
   <%= check= f.check_box :about_me,{}, true, false %>
   <% if check.include?("true")%>
   <%= f.hidden_field :role, :value => 'guide' %>
   <div id="card_details" style="display:none;">
-  <div class="field">
+  <div class="guideField">
   <%= f.label :about_me %> <br /><%= f.text_field :about_me , :required => 'requierd'%>
   </div>
-  <div class="field">
+  <div class="guideField">
     <%= f.label :why_me %><br /> <%= f.text_field :why_me , :required => 'requierd' %>
     </div>
     <div class="actions">
-    <%= button_to "Come a guide", home_searchuser_path, method: :update %>
+    <%= f.submit 'Lat`s Go!' %>
   </div>
     <%end%>
 
@@ -54,9 +37,8 @@
 </div>
 <%end%>
 
-
-<h3>Cancel my account</h3>
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<br />
+<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
 <%= link_to "Back", :back %>
 
 
