--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -22,14 +22,17 @@ body{
     display: flex;
     flex-direction: row;
     margin: 2%;
+    height: 200px;
+    width: 200px;
+    background-color: lawngreen;
 }
 .single-line-trip{
     display: flex;
     font-weight: 100;
     
-    // width: 99%;
-    margin-left:10% ;
-    margin-right: 10%;
+    
+    margin-left:2% ;
+    margin-right: 2%;
     justify-content: space-between;
     
   }
