--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -40,6 +40,7 @@
         <%= link_to  "View", homes_guideprofile_path(:id => @trip.user.id),class:"link-to" %>
         <%= link_to  "Book", bookings_new_path(:id => @trip.id, :user_id => current_user.id),class:"link-to"%>
         <%= link_to 'Edit', trips_edit_path(:id => @trip.id),class:"link-to" %>
+        <%= link_to  "Delete", trip_path(@trip) ,method: :delete%>
     </div>
 </div>
 
