--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,20 +1,25 @@
-<div class="user-info">
-<h1> Welcome <%=@fullname%></h1></div>
+<div class="profile-cont">
+<div class="user-name-profile">
+<h1 > Welcome <%=@fullname%></h1>
+<h2> You have <%=@bookings.count%> bookings</h2>
+</div>
+</div>
 
 
-<div class ="container">        
+<div class ="container">
+<h2>Search For Trip</h2>        
 <%= form_tag(homes_searchuser_path, method: "get") do %>
   <%= text_field_tag(:query, "", class: "input-field") %>
   <%= submit_tag("Search",class: "search-btn") %>
 <% end %>
 <%= link_to  "sign out", destroy_user_session_path, method: :delete, class:".sign" %>
-<div class="book">
+ <div class="search-container"> 
       <% @bookings.each do |booking| %>
-           <div> 
+           <div class="user-card-book"> 
              <%= image_tag  "trip", class:"profile-image" %>
-                <div>
+                <div c>
                     <h4>Trip Name :<%= booking.trip.name%></h4>
-                    <h4>Points Of Intrest:<%= booking.trip.points_of_interest%> <%= booking.trip.time%></h4>
+                    <h4>Points Of Intrest:<%= booking.trip.points_of_interest%> <%= booking.trip.time.to_s.split(" ")[0]%></h4>
                     
                 </div>
             </div>
