--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,13 +27,17 @@ body {
 }
 .input-field {
   width: 40vw;
+  height: 20px;
   border-radius: 10px;
 }
 .search-btn {
-  background-color: d0b375;
+  color: #e9e9e9;
+  background-color: #a31b0c;
   border-radius: 10px 0 10px 0;
   position: absolute;
   right: 27%;
+  height: 20px;
+  width: 60px;
 }
 a {
   color: #d0b375;
@@ -61,6 +65,7 @@ li {
   position: relative;
   display: flex;
   height: fit-content;
+  
 }
 .user-card {
   position: relative;
@@ -239,8 +244,16 @@ li {
   width: 100%;
   background-color: #d0b375;
 }
-// .link-to{
-//   height: 20px;
-//   width: 100px;
-  
-// }
+.user-name{
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+.user-name-profile {
+  margin-top: 2%;
+  text-align: center;
+}
+a:hover{
+  background-color: #d0b375;
+  color: #a31b0c;
+}
