--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -1,9 +1,8 @@
 // Place all the styles related to the Trip controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-body{
-    background-color: beige;
-}
+
+
 .trip-container{
     display: flex;
     flex-direction: column;
@@ -19,18 +18,14 @@ body{
     background-color: #d0b375;
 }
 .trip-div-container{
-    display: flex;
-    flex-direction: row;
-    margin: 2%;
-    height: 200px;
-    width: 200px;
-    background-color: lawngreen;
+    text-align: center;
+    background-color:  #e9e9e9;
+    box-shadow: 0 0 20px rgba(0,0,0, 0.2);
+    
 }
 .single-line-trip{
     display: flex;
     font-weight: 100;
-    
-    
     margin-left:2% ;
     margin-right: 2%;
     justify-content: space-between;
@@ -46,6 +41,20 @@ body{
     border-radius: 12px;
     text-align: center;
   }
+  
+  
+  .user-card-book{
+    position: relative;
+    text-align: center;
+    height: 260px;
+    width: 230px;
+    background-color: #e9e9e9;
+    margin-right: 2%;
+    margin-left: 2%;
+    margin-top: 40px;
+    box-shadow: 0 0 20px rgba(0,0,0, 0.2);
+    padding: 1%;
+  }
   .link-btns{
-      text-align: center;
+      margin: 0 auto;
   }
