--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -6,7 +6,7 @@
              <h3><%=@trip.user.country%> <%=@trip.user.city%><h3>
         </div>
     </div>
-    <div class="trip-div-container"></div>
+    <div class="trip-div-container">
         <div class="trip-div">
              <div class= "single-line-trip">
                    <h2>Trip Name<h2>
@@ -24,6 +24,7 @@
                    <h2>Points Of Interests<h2>
                    <h3><%@trip.points_of_interest%></h3>
              </div> 
+
         </div>
         <div class="trip-div">
         <div class= "single-line-trip">
@@ -36,10 +37,13 @@
              </div> 
         </div>
     </div>
-    <div calss="link-btns">
-        <%= link_to  "View", homes_guideprofile_path(:id => @trip.user.id),class:"link-to" %>
-        <%= link_to  "Book", bookings_new_path(:id => @trip.id, :user_id => current_user.id),class:"link-to"%>
-        <%= link_to 'Edit', trips_edit_path(:id => @trip.id),class:"link-to" %>
-    </div>
+        <div >
+         <div calss="link-btns">
+                  <%= link_to  "View", homes_guideprofile_path(:id => @trip.user.id),class:"link-to" %>
+                  <%= link_to  "Book", bookings_new_path(:id => @trip.id, :user_id => current_user.id),class:"link-to"%>
+                  <%= link_to 'Edit', trips_edit_path(:id => @trip.id),class:"link-to" %>
+            </div>
+        </div>
+</div>
 </div>
 
