--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -20,7 +20,7 @@
                 <div c>
                     <h4>Trip Name :<%= booking.trip.name%></h4>
                     <h4>Points Of Intrest:<%= booking.trip.points_of_interest%> <%= booking.trip.time.to_s.split(" ")[0]%></h4>
-                    
+                    <%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %>
                 </div>
             </div>
         <%end%>
