add css and image trip

--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -2,6 +2,7 @@
     <div class="card-div">
         <%= image_tag  "person-1.jpg", class:"profile-image" %>
         <div class= "user-info">
+            <%= image_tag  @trip.trip_image, :class="trip-image" %>
              <h1><%=@trip.user.first_name%> <%=@trip.user.last_name%><h1>
              <h3><%=@trip.user.country%> <%=@trip.user.city%><h3>
         </div>
@@ -10,6 +11,7 @@
         <div class="trip-div">
              <div class= "single-line-trip">
                    <h2 class="triph2">Trip Name<h2>
+           
                    <h3 class="triph3"><%=@trip.name%></h3>
              </div> 
              <div class= "single-line-trip">
