--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -16,10 +16,12 @@
 
 .card-div-trip-show {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: #d0b375;
+    margin: 0 auto;
 }
 .trip-div-container{
+  
     margin-top:3%;
     height: fit-content;
     
@@ -27,12 +29,14 @@
     width: 45%;
     background-color:  #e9e9e9;
     box-shadow: 0 0 20px rgba(0,0,0, 0.2);
+    margin: 0 auto;
     
     
 }
 .single-line-trip{
     display: flex;
     flex-direction: row;
+    align-content: center;
     font-weight: 100;
     margin-left:5% ;
     margin-right: 2%;
