--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class ="container">       
 <%= form_tag(homes_searchuser_path, method: "get") do %>
-  <%= text_field_tag(:query, "", class: "input-field") %>
+  <%= text_field_tag(:query, "", class: "input-field-user") %>
   <%= submit_tag("Search",class: "search-btn") %>
 <% end %>
  <div class="search-container"> 
