--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container sign-up">
 <h2>Join Our Team</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -40,7 +41,7 @@
 <br />
 <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
 <%= link_to "Back", :back %>
-
+</div>
 
 <script type="text/javascript">
   var checkbox = document.getElementById('user_about_me');
