--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,82 +1,54 @@
 
-<div class="container">
-<div class="sign-up">
-<h2>Sign up</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :Email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-  <div class="field">
-    <%= f.label "First Name".to_sym %><br />
-    <%= f.text_field :first_name %>
-  </div>
+<div class="container sign-up">
+    <h2>Sign up</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+     <%= render "devise/shared/error_messages", resource: resource %>
 
+        <div class="field">
+            <%= f.label :Email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
     <div class="field">
-    <%= f.label "Last Name".to_sym%><br />
-    <%= f.text_field :last_name%>
-  </div>
-  <div class="field">
-    <%= f.label :Country %><br />
-    <%= f.text_field :country %>
-  </div>
-
-    <div class="field">
-    <%= f.label :City %><br />
-    <%= f.text_field :city%>
-  </div>
-  <div class="field">
-    <%= f.label "Phone Number".to_sym %><br />
-    <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-
-</div>
-</div>
-<div class="sign-in">
-<h2>Log in</h2>
-
-<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "current-password" %>
-  </div>
-
-  <% if devise_mapping.rememberable? %>
-    <div class="field">
-      <%= f.check_box :remember_me %>
-      <%= f.label :remember_me %>
+            <%= f.label "First Name".to_sym %><br />
+            <%= f.text_field :first_name %>
     </div>
-  <% end %>
 
-  <div class="actions">
-    <%= f.submit "Log in" %>
-  </div>
-<% end %>
+        <div class="field">
+              <%= f.label "Last Name".to_sym%><br />
+              <%= f.text_field :last_name%>
+        </div>
+        <div class="field">
+            <%= f.label :Country %><br />
+            <%= f.text_field :country %>
+        </div>
 
-<%= render "devise/shared/links" %>
+        <div class="field">
+             <%= f.label :City %><br />
+              <%= f.text_field :city%>
+        </div>
+        <div class="field">
+              <%= f.label "Phone Number".to_sym %><br />
+              <%= f.text_field :phone %>
+         </div>
+         <div class="field">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
+
+          <div class="field">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+
+          <div class="actions">
+              <%= f.submit "Sign up" %>
+          </div>
+      <% end %>
+
+
+</div>
 </div>
