--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -11,8 +11,6 @@ body {
   margin: 0 auto;
   background-color: #f1ece0;
   
-  // background-color: #fffffa;
-  
   color: black;
 }
 .background{
@@ -22,10 +20,34 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.profile-background{
+  height: 100%;
+  width: 100%;
+  background: url("https://www.photocircle.net/eu/photos/thumbnails/zoom/9346-Desert-Night--by-mono-elemento.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top:0;
+}
+.background-user{
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-image: url("https://cleanpublicdomain.com/wp-content/uploads/edd/2018/02/desert-2897107-1560x1040.jpg");
+}
 
 .container {
   height: 100vh;
   width: 100vw;
+  flex-wrap: wrap;
+
+  margin: 0 auto;
+  text-align: center;
+}
+.container-index{
+  height: 60vh;
+  width: 100%;
   flex-wrap: wrap;
 
   margin: 0 auto;
@@ -66,9 +88,30 @@ body {
   height: 25px;
   width: 60px;
 }
+.search-btn:hover{
+  transition: background-color 0.5s ease;
+  background-color: red;
+  box-shadow: rgba(255,255,255, 1);
+}
+.link-to:hover{
+  transition: background-color 0.5s ease;
+  background-color: red;
+  box-shadow: rgba(255,255,255, 1);
+}
+.join_btn:hover{
+  transition: background-color 0.5s ease;
+  background-color: red;
+  box-shadow: rgba(255,255,255, 1);
+}
+.join_btn2:hover{
+  transition: background-color 0.5s ease;
+  background-color: red;
+  box-shadow: rgba(255,255,255, 1);
+}
 a {
   color: #d0b375;
   text-decoration: none;
+  
 }
 .link-to{
   color: black;
@@ -178,6 +221,7 @@ li {
   position: absolute;
   top: 1%;
   left: 80%;
+  cursor: pointer;
 }
 .join_btn {
   background-color: #d0b375;
@@ -190,6 +234,7 @@ li {
   position: absolute;
   top: 1%;
   left: 90%;
+  cursor: pointer;
 }
 .about-me {
   position: absolute;
@@ -217,7 +262,7 @@ li {
   height: 1.5em;
   width: 7em;
   border-radius: 12px;
-  
+  cursor: pointer;
 
 }
 .full-name-profile {
@@ -286,8 +331,13 @@ li {
   width: 100%;
 }
 .user-name-profile {
-  margin-top: 2%;
+  // margin-top: 2%;
   text-align: center;
+  color: #d0b375;
+}
+.profile-cont{
+  padding-top: 14%;
+  margin-bottom: 6%;
 }
 a:hover{
   background-color: #d0b375;
