--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,7 +1,8 @@
 <div class="card-div-trip-show ">
-    <div class="card-div">
+    <div class="card-div-trip">
         <%= image_tag  "person-1.jpg", class:"profile-image" %>
         <div class= "user-info">
+            
              <h1><%=@trip.user.first_name%> <%=@trip.user.last_name%><h1>
              <h3><%=@trip.user.country%> <%=@trip.user.city%><h3>
         </div>
@@ -26,8 +27,7 @@
                    <h3 class="triph3"><%@trip.points_of_interest%></h3>
              </div> 
 
-        </div>
-        <div class="trip-div">
+            
         <div class= "single-line-trip">
                    <h2 class="triph2">Date and Time<h2>
                    <h3 class="triph2"><%@trip.time%></h3>
@@ -36,7 +36,7 @@
                    <h2 class="triph2">Duration<h2>
                    <h3 class="triph2"><%=@trip.duration%></h3>
              </div> 
-        </div>
+      </div>
     </div>
     
 </div>
@@ -44,6 +44,6 @@
         <%= link_to  "View", homes_guideprofile_path(:id => @trip.user.id),class:"link-to" %>
         <%= link_to  "Book", bookings_new_path(:id => @trip.id, :user_id => current_user.id),class:"link-to"%>
         <%= link_to 'Edit', trips_edit_path(:id => @trip.id),class:"link-to" %>
-        <%= link_to  "Delete", trip_path(@trip) ,method: :delete%>
+        <%= link_to  "Delete", trip_path(@trip) ,method: :delete ,class:"link-to"%>
     </div>
 
