--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,12 +1,13 @@
+<div class="profile-background">
 <div class="profile-cont">
 <div class="user-name-profile">
-<h1 > Welcome <%=@fullname%></h1>
+<h1> Welcome <%=@fullname%></h1>
 <h2> You have <%=@bookings.count%> bookings</h2>
 </div>
 </div>
 
 
-<div class ="container">       
+<div class ="container-index">       
 <%= form_tag(homes_searchuser_path, method: "get") do %>
   <%= text_field_tag(:query, "", class: "input-field-user") %>
   <%= submit_tag("Search",class: "search-btn") %>
@@ -26,4 +27,5 @@
     </div>
  </div>
 
+ </div>
  </div>
