--- a/app/views/homes/searchuser.html.erb
+++ b/app/views/homes/searchuser.html.erb
@@ -1,4 +1,4 @@
-<div class ="container">
+<div class ="container background-user">
 
  <div class="search-container"> 
       <% @result.each.each do |result| %>
