--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,7 +10,7 @@
 body {
   margin: 0 auto;
   background-color: #f1ece0;
-  
+  overflow: hidden;
   color: black;
 }
 .background{
@@ -89,13 +89,14 @@ body {
   width: 60px;
 }
 .search-btn:hover{
-  transition: background-color 0.5s ease;
+  transition: background-color 1s ease;
   background-color: red;
   box-shadow: rgba(255,255,255, 1);
 }
 .link-to:hover{
-  transition: background-color 0.5s ease;
+  transition: background-color 1s ease;
   background-color: red;
+  color: #e9e9e9;
   box-shadow: rgba(255,255,255, 1);
 }
 .join_btn:hover{
@@ -118,6 +119,7 @@ a {
 }
 nav {
   background-color: #101010ff;
+
   height: 40px;
   padding: 3vh;
   margin: 0 auto;
@@ -143,6 +145,7 @@ li {
   height: 160px;
   width: 200px;
   background-color: #e9e9e9;
+  opacity: 0.7;
   margin-right: 2%;
   margin-left: 2%;
   margin-top: 40px;
@@ -165,6 +168,7 @@ li {
   height: 160px;
   width: 90vw;
   background-color: #e9e9e9;
+  opacity: 0.4;
   margin-right: 2%;
   margin-left: 2%;
   margin-top: 40px;
@@ -219,7 +223,7 @@ li {
   width: 7em;
   border-radius: 12px;
   position: absolute;
-  top: 1%;
+  top: 1.5%;
   left: 80%;
   cursor: pointer;
 }
@@ -232,7 +236,7 @@ li {
   width: 7em;
   border-radius: 12px;
   position: absolute;
-  top: 1%;
+  top: 1.5%;
   left: 90%;
   cursor: pointer;
 }
@@ -278,6 +282,8 @@ li {
   display: flex;
   height: 200px;
   padding: 2%;
+  color: #e9e9e9;
+  background-color: rgba(255,255,255, 0.3);
 }
 .profile-image{
   width: 200px;
@@ -286,9 +292,10 @@ li {
 .about-guied{
   display: flex;
   flex-direction: row;
-  height: 130px;
+  color: #e9e9e9;
+  height: 70px;
   padding: 2%;
-  background-color: gray;
+  background-color: rgba(0,0,0, 0.2)
 }
 .single-line{
   display: flex;
@@ -313,7 +320,7 @@ li {
   flex-direction: column;
   height: 100px;
   width: 200px;
-  background-color: #a31b0c;
+  // background-color: #a31b0c;
   padding: 2%;
 }
 .t-box {
@@ -323,7 +330,7 @@ li {
   display: flex;
   flex-direction: row;
   width: 100%;
-  background-color: #d0b375;
+  // background-color: #d0b375;
 }
 .user-name{
   text-align: center;
@@ -336,8 +343,8 @@ li {
   color: #d0b375;
 }
 .profile-cont{
-  padding-top: 14%;
-  margin-bottom: 6%;
+  padding-top: 10%;
+  margin-bottom: 1.1%;
 }
 a:hover{
   background-color: #d0b375;
