--- a/app/assets/stylesheets/trip.scss
+++ b/app/assets/stylesheets/trip.scss
@@ -60,13 +60,13 @@
     
   }
   
-  
   .user-card-book{
     position: relative;
     text-align: center;
     height: 260px;
     width: 230px;
     background-color: #e9e9e9;
+    opacity: 0.7;
     margin-right: 2%;
     margin-left: 2%;
     margin-top: 40px;
@@ -88,4 +88,15 @@
   }
   .triph3 {
     font-size: 12px;
+  }
+  .trip-confirm{
+    margin: 0 auto;
+    position: absolute;
+    top:35%;
+    right:25%;
+    height: 30%;
+    width: 50%;
+    background-color: seashell;
+    opacity: 0.6;
+    
   }
