--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,7 +45,7 @@
           </div>
 
           <div class="actions">
-              <%= f.submit "Sign up" %>
+              <%= f.submit "Sign up", class:"link-to" %>
           </div>
       <% end %>
 
