--- a/app/views/homes/aboutus.html.erb
+++ b/app/views/homes/aboutus.html.erb
@@ -1,11 +1,10 @@
-<div class=container>
-    <div class="faqs">
-        <h2> How many people can join a tour? </h2>
-        <h3 class="faqs-h3">We keep our group sizes low so you have the freedom to move around and get involved with your surroundings, as well as more personal attention from our local guides. This intimate size ensures that your group will not crowd your experience. You can expect up to 15 travelers on a trip but the average is 10. Check individual trip pages for maximum group sizes.</h3> <br />
-        <h2> What clothing should I pack for one of your adventures? </h2>
-        <h3 class="faqs-h3">We always recommend packing as light as possible however the specific requirements for your tour will vary widely depending on where and when you are traveling. Our 'Trip Details' document includes a suggested packing list and these can be downloaded from each individual trip summary page. The checklist is tour specific and based upon the experience of our ground staff.</h3> <br />
-        <h2>What are the age restrictions on your tours</h2>
-        <h3 class="faqs-h3">To travel independently you must be at least 18 years of age. There are no upper age limits for most of our tours (although 18-to-Thirtysomethings tours are restricted exclusively to 18-to-39-year-olds). Also, travellers with pre-existing medical conditions are required to complete a medical questionnaire. Our Family Adventures are open to families with children aged between 6 and 17 years of age. Our standard (non-family) adventures are open to children aged 12 years or older when accompanied by a parent (max. two children per adult). The two-children-per-adult restriction does not apply to our Family adventures.</h3>
-
-    </div>
+<div class='pic'> 
+</div>
+<div class='about'>
+<h1>
+ Looking to get the best out of your holiday?</h1> <br /> 
+ <h2>Let us help you</h2> <br /> 
+  <h3> we will getting you a great guide & trip someone who will help you navigate local language and culture,tell you stories that only a local would know!
+Locide is an online platform that connects travellers with tourism service providers. Guides register their profiles here, providing detailed information about themselves, services and experiences.
+Travellers who visit Locide can choose from many of these guides and tourism providers, to find the one most suited to their requirements.hence enjoying their trip on their own terms. By engaging locals, travellers more so help support the local communities in the areas they visit.</h3>
 </div>
