--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -10,7 +10,8 @@
 body {
   margin: 0 auto;
   background-color: #f1ece0;
-  overflow: hidden;
+  overflow-x: hidden;
+  
   color: black;
 }
 .background{
@@ -29,9 +30,9 @@ body {
   margin-top:0;
 }
 .background-user{
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  background-size: cover;
+  object-fit: cover;
   background-position: bottom;
   background-repeat: no-repeat;
   background-image: url("https://cleanpublicdomain.com/wp-content/uploads/edd/2018/02/desert-2897107-1560x1040.jpg");
@@ -136,6 +137,8 @@ li {
 .search-container {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
 
   
 }
