--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 
-
-<div class="container sign-up">
+<div class="log-in-background">
+<div class="container log-in">
     <h2>Sign up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
      <%= render "devise/shared/error_messages", resource: resource %>
@@ -50,5 +50,6 @@
       <% end %>
 
 
+</div>
 </div>
 </div>
