--- a/app/views/trips/_form.html.erb
+++ b/app/views/trips/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container log-in">
 <%= form_for @trip do |f| %>
     <%=f.label :name, 'Name of the trip'%>
     <%=f.text_field :name, placeholder: "Come up with something attractive", :required => 'required'%>
