--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
+<div class="log-in-background">
+<div class="container log-in">
 <h1>New Trip</h1>
 <%= render 'trips/form' %>
+</div>
 </div>
